# AI-Agents

./: .env  README.md  pyproject.toml  requirement.txt
deployment/: deploy.py
reports/: research_report_Advancements_in_biomedical_eng_20251129_215324.md  research_report_Latest_advancement_in_quantum__20251129_213457.md  research_report_Latest_development_in_renewabl_20251129_213912.md
src/research_assistant/: __init__.py  agent.py
src/research_assistant.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/research_assistant/sub_agents/content_analysis_agent/: __init__.py  agent.py  prompt.py
src/research_assistant/sub_agents/query_builder_agent/: __init__.py  agent.py  prompt.py
src/research_assistant/sub_agents/report_generation_agent/: __init__.py  agent.py  prompt.py
src/research_assistant/sub_agents/research_agent/: agent.py  prompt.py
src/research_assistant/tools/: agent_tools.py
tests/: test_agent.py
